<resources>
    <string name="app_name">BankApp</string>
    <string name="app_logo">App logo</string>
    <string name="password_input">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="last_operations_title">Последние операции</string>
    <string name="expenses_title">Список расходов</string>
    <string name="incomes_title">Список доходов</string>
    <string name="wallets_title">Доступные средства</string>

    <string name="action_button_text">Добавить</string>

    <string name="nav_item_1">Доходы</string>
    <string name="nav_item_2">Главная</string>
    <string name="nav_item_3">Расходы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_label_sum">Сумма</string>
    <string name="input_hint_sum">Введите сумму</string>
    <string name="input_label_type">Тип операции</string>
    <string name="input_hint_type">Введите тип операции</string>
    <string name="input_button_cancel">Отменить</string>
    <string name="input_button_add">Добавить</string>
    <string name="input_hint_date">Выберите дату</string>
    <string name="input_label_date">Дата</string>
    <string name="wallet">Кошелек</string>
    <string name="start_date">Начало периода</string>
    <string name="end_date">Конец периода</string>
    <string name="text_wallet">Кошелек</string>
    <string name="wallet_balance_title">Баланс:</string>
</resources>