<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Login Input -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_launcher_foreground"
        app:tint="#FFFFFF" />

    <!-- Login Input -->
    <EditText
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/login_button"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/dark_gray_hint" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/dark_gray_hint" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple"
        android:padding="12dp"
        android:text="@string/login_button"
        android:textColor="@color/light_gray" />

    <!-- Forgot Password Link -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/purple"
        android:textSize="14sp" />

    <!-- Sign Up Link -->
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textColor="@color/purple"
        android:textSize="14sp" />
</LinearLayout>