<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:cardBackgroundColor="#150B21">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_margin="10dp"
                        android:paddingTop="10dp"
                        android:gravity="start">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_label_sum"
                            android:textColor="@color/input_field_text" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:gravity="center">
                        <EditText
                            android:id="@+id/input_sum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="100"
                            android:hint="@string/input_hint_sum"
                            android:textColor="@color/input_field_text"
                            android:inputType="numberDecimal"
                            android:textColorHint="@color/input_field_hint"/>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_margin="10dp"
                        android:gravity="start"
                        android:paddingTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_label_type"
                            android:textColor="@color/input_field_text"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:gravity="center">
                        <EditText
                            android:id="@+id/input_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="100"
                            android:hint="@string/input_hint_type"
                            android:textColor="@color/input_field_text"
                            android:inputType="text"
                            android:textColorHint="@color/input_field_hint"/>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_margin="10dp"
                        android:gravity="start"
                        android:paddingTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_label_date"
                            android:textColor="@color/input_field_text" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:gravity="center">
                        <EditText
                            android:id="@+id/input_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_hint_date"
                            android:textColorHint="@color/input_field_hint"
                            android:textColor="@color/input_field_text"
                            android:focusable="false" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_margin="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/input_button_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_button_add"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_margin="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/input_button_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_button_cancel"/>
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>